# hermes-rag

./: .gitignore  README.md  api.py  auth.py  config.py  contextual_chunking.py  database.py  ingest.py  main.py  models.py  ocr_engine.py  pyproject.toml  query_rewrite.py  rag_engine.py  requirements.txt  reranker.py  retrieval.py  rule_engine.py  schemas.py  study.md  utils.py
.github/workflows/: ci.yml
.workbuddy/memory/: 2026-07-02.md  MEMORY.md
demo/teaching/: 01_hr_handbook.md  02_finance_q1.md  03_meeting_minutes.md  04_prompt_injection.md  README.md
docs/: DEMO.md  EVAL.md  EXPERIMENTS.md  HYBRID_RETRIEVAL.md  RAG_EVALUATION.md  SETUP.md  SKILLS.md  TESTING.md  USAGE.md
evals/: dataset.demo.jsonl  dataset.example.jsonl  rag_quality.jsonl  rag_quality.py  thresholds.json
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: app.spec.ts
frontend/src/app/: layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/admin/: page.tsx
frontend/src/app/(main)/documents/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: model-selector.tsx  provider-quick-picker.tsx  skill-quick-picker.tsx  skill-selector.tsx  thinking.tsx
frontend/src/components/layout/: sidebar.tsx  top-bar.tsx
frontend/src/lib/: api.ts  chat-context.tsx
scripts/: eval_rag.py  eval_retrieval.py  fill_report.py  generate_demo_pdfs.py  start-dev.ps1  start-dev.sh
tests/: conftest.py  test_api_integration.py  test_eval_metrics.py  test_ingestion_reliability.py  test_p0_rag.py
(+1 files in other folders)
