[project]
name = "hermes-rag"
version = "0.1.0"
description = "基于 RAG 的本地化知识问答系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "chromadb==0.4.24",
    "onnxruntime==1.17.3",
    "numpy<2.0",
    "openai",
    "pypdf",
    "python-docx",
    "docx2txt",
    "PyMuPDF",
    "Pillow",
    "beautifulsoup4",
    "lxml",
    "openpyxl",
    "python-pptx",
    "sqlalchemy",
    "python-dotenv",
    "PyJWT",
    "bcrypt",
    "tenacity",
    "pytest",
    "httpx",
    "rank_bm25",
    "jieba",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
